# documents

./: about.md  howto.md  index.md  org-desc.md  readme.md  risk_statement.md
constitution/: amendment_1.md  amendment_2.md  constitution_changes_jp.md  index.md  unratified_amendments.md  w24.md  w25.md  w26.md
handbook/: index.md  maize_page.md  purchases.md
legislation/: F24-001.md  F24-002.md  F24-003.md  F24-004.md  F24-005.md  S24-004.md  S24-006.md  S24-007.md  S24-010.md  S24-011.md  S24-012.md  S24-014.md  S24-015.md  W24-001.md  W24-002.md  W24-003.md  W24-004.md  W24-005.md  W24-008.md  W24-013.md  W24-015.md  W24-016.md  legislation.md
meetings/: ma_10.md  ma_11.md  ma_12.md  ma_13.md  ma_2.md  ma_5.md  ma_6.md  ma_8.md  ma_9.md  meeting 1.pptx  meetings.md
meetings/bm1/: ma_1.md
meetings/bm3/: ma_3.md
meetings/bm4/: ma_4.md
meetings/w24/m1/: demo_cs.md
memorandums/: S24-001.md  S24-002.md  S24-003.md  S24-005.md  S24-008.md  S24-009.md  S24-013.md  W24-006.md  W24-007.md  W24-009.md  W24-010.md  W24-011.md  W24-012.md  W24-014.md  W24-017.md  memos.md  test.md
pr/: pr.md
projects/: projects.md
projects/proposals/: proposal_example.md
scripts/: tables.py
workshops/: index.md
workshops/cmake_basics/: readme.md
workshops/cmake_basics/external_func/: CMakeLists.txt  dot_prod.cpp  fun_math_lib.cpp
workshops/mex_workshop/: hello.cpp  readme.md
workshops/python_packaging/: workshop.md
workshops/quantum_computing/: bell_state_demo.ipynb  helper_functions.py  presentation_link  qaoa_demo.ipynb
(+6 files in other folders)
